<resources>
    <string name="app_name">운동플래닛</string>
    <string name="home">홈</string>
    <string name="write">글쓰기</string>
    <string name="chatting">채팅</string>
    <string name="mypage">마이페이지</string>

    <!-- kakao_native_app_key -->
    <string name="kakao_native_app_key">27b6df70cdf8f39d98b68da14b2650bd</string>

    <!-- activity_splash -->
    <string name="splash_text1">우리 오늘 운동해요</string>

    <!--  activity_intro -->
    <string name="intro_text1">수많은 사람들 중에,\n같이 운동할 사람 하나 없겠어?</string>
    <string name="intro_text_2">원하는 장소, 원하는 시간에\n우리 오늘 운동해요, 운동플래닛</string>
    <string name="intro_button_text1">시작하기</string>

    <!-- activity_login -->
    <string name="login_button_text1">카카오톡으로 간편로그인</string>

    <!-- chatting self-updating relative time translate-->
    <string name="blitz_future">미래</string>
    <string name="blitz_now">방금 전</string>

    <string name="blitz_single_minute">1분 전</string>
    <string name="blitz_single_hour">1시간 전</string>
    <string name="blitz_single_day">어제</string>
    <string name="blitz_single_week">1주 전</string>
    <string name="blitz_single_month">1달 전</string>
    <string name="blitz_single_year">1년 전</string>

    <plurals name="blitz_seconds">
        <item quantity="other">%d초 전</item>
    </plurals>

    <plurals name="blitz_minutes">
        <item quantity="other">%d분 전</item>
    </plurals>

    <plurals name="blitz_hours">
        <item quantity="other">%d시간 전</item>
    </plurals>

    <plurals name="blitz_days">
        <item quantity="other">%d일 전</item>
    </plurals>

    <plurals name="blitz_weeks">
        <item quantity="other">%d주 전</item>
    </plurals>

    <plurals name="blitz_months">
        <item quantity="other">%d달 전</item>
    </plurals>

    <plurals name="blitz_years">
        <item quantity="other">%d년 전</item>
    </plurals>

    <!-- fragment_chatting -->
    <string name="fragment_chatting_nothing">활동 참가신청과 함께\n채팅을 시작하세요!</string>

    <!-- item_chatting_room -->
    <string name="Host">Host</string>
    <string name="Guest">Guest</string>
    <string name="ProfileMessageLastMessage">프로필 메세지입니다.</string>

    <!-- item_chat_bot_notice_message -->
    <string name="item_chat_bot_notice_message_rule">이용규칙 보러가기</string>
    <string name="item_chat_bot_notice_message_history">히스토리 바로가기</string>

    <!-- item_received_profile_message -->
    <string name="received_profile_message_text1">기본소개</string>
    <string name="received_profile_message_visit_profile">프로필 놀러가기</string>

    <!-- item_sent_profile_message -->
    <string name="sent_profile_message_text1">기본소개</string>

    <!-- dialog_common -->
    <string name="dialog_common_chatting_notice">
        <![CDATA[
<p>운동과 함께 건강한 삶을 시작하는\n운동플래닛 이용규칙! 알고 계신가요?</p><br/>
<p>운동플래닛은!</p>
<p>1. 매너로 시작해, 매너로 끝납니다.</p>
<p>욕설, 비방 등 상대방을 상처 주는 말을 하면 신고를 받을 수 있어요! 신고 횟수가 누적되면 해당글 삭제 및 계정정지를 당할 수 있습니다.</p>
<p>2. 데이팅 앱이 아닙니다.</p>
<p>온라인 채팅, 오프라인 운동에서 전화번호 , 이름, 메신저 ID 등 개인정보를 묻지 말아 주세요!</p>
<p>3. 운동 후 평가로 더 안전해져요.</p>
<p>안정적인 게스트 모집을 위해 최소 4시간 이후 활동부터 신청 가능합니다!</p>
        ]]>
    </string>
    <string name="dialog_common_content1">호스트에게 간단한 프로필과 함께 참가신청이 보내집니다.</string>
    <string name="dialog_common_content2">채팅방에서 나가시겠습니까?\n나가기를 하면 대화내용이 모두 삭제되며 채팅목록에서도 지워집니다.</string>
    <string name="dialog_common_cancle">취소</string>
    <string name="dialog_common_ok1">신청하기</string>
    <string name="dialog_common_ok2">나가기</string>

    <!-- dialog_notice -->
    <string name="dialog_notice_content1">
        <![CDATA[
        운동과 함께 건강한 삶을 시작하는<br/><font color=#364ea0>운동플래닛 이용규칙!</font> 알고 계신가요?<br/>
        ]]>
        </string>
    <string name="dialog_notice_content2">운동플래닛은!\n</string>
    <string name="dialog_notice_content3">1. 매너로 시작해, 매너로 끝납니다.</string>
    <string name="dialog_notice_content4">욕설, 비방 등 상대방을 상처 주는 말을 하면 신고를 받을 수 있어요! 신고 횟수가 누적되면 해당글 삭제 및 계정정지를 당할 수 있습니다.\n</string>
    <string name="dialog_notice_content5">2. 데이팅 앱이 아닙니다.</string>
    <string name="dialog_notice_content6">온라인 채팅, 오프라인 운동에서 전화번호 , 이름, 메신저 ID 등 개인정보를 묻지 말아 주세요!\n</string>
    <string name="dialog_notice_content7">3. 운동 후 평가로 더 안전해져요.</string>
    <string name="dialog_notice_content8">운동 후 ‘좋아요’, ‘싫어요’, ‘신고하기’ 리뷰를 통해 호스트와 게스트에 대해 알려주세요! 여러분의 소중한 리뷰가 더욱 안전하고 ‘좋아요’ 가득한 운동플래닛을 만듭니다!</string>
    <string name="dialog_notice_ok">위의 내용을 확인했습니다.</string>

    <!-- activity_chatting -->
    <string name="activity_chatting_origin_board">원글보기</string>
    <string name="activity_chatting_toast">이미 종료된 활동입니다.</string>

    <!-- activity_profile -->
    <string name="activity_profile_head">프로필 작성</string>
    <string name="activity_profile_head_edit">프로필 수정</string>
    <string name="activity_profile_hint_name">이름</string>
    <string name="activity_profile_hint_email">이메일</string>
    <string name="activity_profile_hint_nick_name">닉네임 (한글, 영어, 숫자 사용가능)</string>
    <string name="activity_profile_hint_introduce_myself">당신을 소개해 주세요!\n연락처, SNS계정, 홍보성 글, 부적절한 내용 등이\n포함될 경우 사전 고지없이 계정이 정지될 수 있습니다.</string>
    <string name="activity_profile_interest_excise">관심 운동을 선택해주세요. (최대 3개)</string>
    <string name="activity_profile_interest_excise_popup">운동 종목</string>
    <string name="activity_residence">거주 지역을 선택해 주세요.</string>
    <string name="activity_profile_residence_popup">지역</string>
    <string name="activity_profile_introduce_myself">프로필 소개 글을 작성해주세요.</string>
    <string name="activity_profile_start">시작하기</string>
    <string name="dialog_select_complete">선택완료</string>
    <string name="dialog_select_title">관심 운동을 선택해주세요 (최대3개)</string>
    <string name="dialog_region_title">거주 지역을 선택해주세요</string>
    <string name="dialog_base_accept_ok">확인</string>
    <string name="dialog_base_accept_cancel">취소</string>
    <string name="dialog_show_finished_popup">회원가입을 축하드립니다!\n운동플래닛과 건강한 운동생활을\n시작해보세요!</string>
    <string name="dialog_logout_title">삭제하기 전, 다시 한 번 생각해주세요!</string>
    <string name="dialog_logout_body">계정을 삭제하면 프로필 정보, 활동기록, 관심활동, 채팅기록 등 모든 활동정보가 사라집니다.</string>
    <string name="dialog_logout_ok">계정 삭제하기</string>

    <!-- activity_home -->
    <string name="filter_option_text">검색 필터</string>
    <string name="filter_time_recent_upload">최신순</string>
    <string name="filter_time_person_count">남은인원순</string>
    <string name="filter_time_time_count">기간임박순</string>

    <!-- activity_home -->
    <string name="activity_filter_title">검색 필터 설정</string>
    <string name="activity_filter_ok">필터적용</string>
    <string name="activity_filter_reset">초기화</string>

    <string name="countNumber">%d명</string>
    <string name="activity_write_body_hint">활동에 관한 게시글 내용을 작성해주세요!\n( 활동과 관련없는 악의성, 선정적 내용은 사전 고지없이 삭제될 수 있습니다. )</string>

    <string name="full_date_format">yyyy년 MM월 dd일 HH시 mm분</string>
    <string name="write_date_format">yyyy-MM-ddT</string>
    <string name="write_time_format">HH:mm</string>
    <string name="write_place_hint">ex ) OO역 3번 출구, OO체육관 2층</string>

    <!-- fragment_mypage.xml -->
    <string name="fragment_my_page_title">마이페이지</string>
    <string name="fragment_my_page_edit_profile">프로필 수정</string>
    <string name="fragment_my_page_history">히스토리</string>
    <string name="fragment_my_page_bookmark">스크랩</string>
    <string name="fragment_my_page_setting">설정</string>
    <string name="fragment_my_page_intro_title">기본소개</string>
    <string name="fragment_my_page_excise_title">관심운동</string>
    <string name="fragment_my_page_address_title">거주지역</string>

    <!-- fragment_setting.xml -->
    <string name="fragment_setting_version">버전 1.0.0</string>
    <string name="fragment_setting_logout">탈퇴하기</string>

    <!-- fragment_edit_profile.xml -->
    <string name="fragment_edit_profile_edit_text">프로필 수정하기</string>

    <!-- activity_history.xml -->
    <string name="activity_history_tab_title_1">진행중</string>
    <string name="activity_history_tab_title_2">활동완료</string>
    <string name="activity_history_title">히스토리</string>

    <!-- item_history_ing.xml -->
    <string name="item_history_ing_recruit_number">%1$d/%2$d명</string>
    <string name="item_history_ing_host">Host</string>
    <string name="item_history_ing_guest">Guest</string>
    <string name="item_history_ing_expand">더보기</string>
    <string name="item_history_ing_unexpand">접기</string>
    <string name="item_history_finish_expand_report">신고</string>

    <!-- dialog_report.xml -->
    <string name="dialog_report_title">신고하려는 내용을 선택해주세요.</string>
    <string name="dialog_report_text_1">중간에 연락이 두절됐어요</string>
    <string name="dialog_report_text_2">활동에 참여하지 않았어요</string>
    <string name="dialog_report_text_3">사전 연락없이 30분 이상 지각했어요</string>
    <string name="dialog_report_text_4">원치 않는 연락을 계속 보내요</string>
    <string name="dialog_report_text_5">욕설 및 비 매너 행위를 했어요</string>
    <string name="dialog_report_text_6">대관비 등 활동 내 비용을 내지 않았어요</string>
    <string name="dialog_report_text_7">활동을 중간에 취소했어요</string>
    <string name="dialog_report_text_8">기타 :</string>
    <string name="dialog_report_etc_hint">내용을 입력해주세요</string>
    <string name="dialog_report_report">신고하기</string>
    <string name="dialog_success_body">신고가 정상적으로 접수되었습니다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_scrap_go_board">게시글 페이지로 이동</string>
    <string name="fragment_scrap_body">마음에 드는 게시글을\n스크랩하세요!</string>
    <string name="dialog_chatting_room_body">게스트 참여 승인을 위해 해당 채팅창으로\n이동 하시겠습니까?</string>
    <string name="dialog_chatting_room_ok">채팅창으로 이동</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_board_report_text_1">욕설 및 악의성 내용이 포함돼있어요</string>
    <string name="dialog_board_report_text_2">선정적인 내용이 포함돼있어요</string>
    <string name="dialog_board_report_text_3">활동과 관련 없는 홍보성 글이에요</string>
</resources>
