<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            style="@style/regular_basic_16sp_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_base_accept_margin_16dp"
            android:paddingHorizontal="24dp"
            android:text="@string/dialog_logout_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_body"
            style="@style/medium_basic_16sp_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_base_accept_margin_24dp"
            android:paddingHorizontal="24dp"
            android:text="@string/dialog_logout_body" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                style="@style/medium_basic"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:background="@color/white_gray"
                android:gravity="center"
                android:text="@string/dialog_base_accept_cancel"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/tv_ok"
                style="@style/medium_basic"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:background="@color/light_gray"
                android:gravity="center"
                android:text="@string/dialog_logout_ok"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</layout>