<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.sport_planet.presentation.profile.ProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/activity_profile_padding_16dp"
            tools:context=".presentation.profile.ProfileActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/activity_profile_margin_8dp"
                    android:layout_marginEnd="@dimen/activity_profile_margin_8dp"
                    android:padding="@dimen/activity_profile_padding_8dp"
                    android:src="@drawable/icons_24_px_back_arrow" />

                <TextView
                    style="@style/bold_basic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/activity_profile_head"
                    android:textColor="@color/black"
                    android:textSize="@dimen/activity_profile_text_size_20sp" />
            </LinearLayout>

            <View
                android:id="@+id/v_divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_gray" />

            <EditText
                android:id="@+id/et_name"
                style="@style/medium_basic_16sp_black"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:hint="@string/activity_profile_hint_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/activity_profile_padding_16dp"
                android:text="@={vm.userName}" />

            <EditText
                android:id="@+id/et_email"
                style="@style/medium_basic_16sp_black"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:hint="@string/activity_profile_hint_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/activity_profile_padding_16dp"
                android:text="@={vm.userEmail}" />

            <EditText
                android:id="@+id/et_nick_name"
                style="@style/medium_basic_16sp_black"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@null"
                android:imeOptions="actionDone"
                android:hint="@string/activity_profile_hint_nick_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/activity_profile_padding_16dp"
                android:text="@={vm.userNickname}" />

            <TextView
                android:id="@+id/tv_interest_excise"
                style="@style/medium_basic_16sp_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_profile_interest_excise" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_interest_excise"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:background="@drawable/shape_round_corner">

                <TextView
                    android:id="@+id/tv_interest_exercise_popup"
                    style="@style/medium_basic"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:onClick="@{() -> vm.showExercisePopup()}"
                    android:text="@string/activity_profile_interest_excise_popup"
                    android:textColor="@color/blue233c93"
                    app:drawableEndCompat="@drawable/icons_18_px_toggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/tv_residence"
                style="@style/medium_basic_16sp_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_residence" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_region"
                android:layout_width="72dp"
                android:layout_height="32dp"
                android:background="@drawable/shape_round_corner">

                <TextView
                    android:id="@+id/tv_residence_popup"
                    style="@style/medium_basic"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:onClick="@{() -> vm.showRegionPopup()}"
                    android:text="@string/activity_profile_residence_popup"
                    android:textColor="@color/blue233c93"
                    app:drawableEndCompat="@drawable/icons_18_px_toggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_region_list"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape_round_corner_darkblue_opacity"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_region"
                    style="@style/medium_basic"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/item_exercise_list_margin_12dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:textColor="@color/blue233c93"
                    app:layout_constraintEnd_toStartOf="@id/iv_x"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="강남구" />

                <ImageView
                    android:id="@+id/iv_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/item_exercise_list_margin_8dp"
                    android:padding="@dimen/item_exercise_list_padding_4dp"
                    android:src="@drawable/icons_18_px_x"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_introduce_myself"
                style="@style/medium_basic_16sp_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_profile_introduce_myself" />

            <EditText
                android:id="@+id/et_introduce_myself"
                style="@style/medium_basic_16sp_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/activity_profile_hint_introduce_myself"
                android:inputType="textMultiLine"
                android:text="@={vm.userIntroduceMyself}" />

            <TextView
                android:id="@+id/tv_start"
                style="@style/medium_basic_16sp"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/activity_profile_margin_16dp"
                android:background="@color/grayefefef"
                android:enabled="false"
                android:gravity="center"
                android:onClick="@{() ->vm.postSignUp()}"
                android:text="@string/activity_profile_start"
                android:textColor="@color/gray9c9c9c" />

        </LinearLayout>
    </ScrollView>
</layout>